kubernetes/bank.auth.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-auth-api
  template:
    metadata:
      labels:
        app: bank-auth-api
    spec:
      containers:
      - name: bank-auth-container
        imagePullPolicy: Never
        image: bank.auth.api:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
