kubernetes/bank.auth.service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-auth-service
spec:
  type: NodePort
  selector:
    app: bank-auth-api
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 32000
