kubernetes/bank.loans.service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-loans-service
spec:
  type: NodePort
  selector:
    app: bank-loans-api
  ports:
  - port: 8081
    targetPort: 80
    nodePort: 31000
