kubernetes/loadBalancer.service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: bank
  ports:
  - name: "4001"
    port: 4001
    targetPort: 80
