kubernetes/ingress.service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: bank-auth-service
            port:
              number: 8080
      - path: /loans
        pathType: Prefix
        backend:
          service:
            name: bank-loans-service
            port: 
              number: 8081
